--- a/card-game/src/app/testboard/testboard.component.html
+++ b/card-game/src/app/testboard/testboard.component.html
@@ -1,5 +1,2 @@
 <app-game [id]="gameId" [playerId]="playerA"></app-game>
-
-<app-game [id]="gameId" [playerId]="playerB"></app-game> <br/>
-
-<button mat-raised-button (click)="createGame()">Create game</button><br/><br/>
+<!-- <button mat-raised-button (click)="createGame()">Create game</button><br/><br/> -->
