--- a/card-game/src/app/game/game.component.scss
+++ b/card-game/src/app/game/game.component.scss
@@ -1,56 +1,81 @@
-.actions_container, .board_container, .game_container{
+.actions-container, .board_container, .game-container{
     display: inline-block;
 }
 
-.game_container{
-    margin: 20px;
-    width: 1500px;
-    color:#00000075;
-    left: 50%;
-    margin-left: -750px;
-    position: relative;
-    margin-bottom: 80px;
+.game-container{
+    width: 100vw;
+    height: 100vh;
+    color: #00000075;
+    background-color: #e6b56b;
 }
 
-.board_container{
-    background: #e4b85f;
+.actions-container{
+    background-color: #fdcb7f;
+    color: #000000c7;
     padding: 15px;
-    border-radius: 10px;
-}
-
-.board_side{
-    background-color: #efcd87;
-    border-radius: 5px;
-    padding: 10px 30px;
-    min-height: 320px;
-    margin-bottom: 10px;
-}
-
-.actions_container{
-    background-color: #22212d;
-    color: #ffffff60;
-    padding: 15px;
-    float: right;
-    width: 350px;
-    border-radius: 5px;
+    padding-right: 5px;
+    float: left;
+    width: 130px;
+    -webkit-transform: translate(0%, -50%);
+    transform: translate(0%, -50%);
+    top: 50vh;
+    right: 25px;
+    position: absolute;
+    box-shadow: 0px 4px 12px #00000030;
     p{
         margin-bottom: 8px;
     }
 }
 
-.recruitChampion{
+.guide-container{
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    width: 300px;
+    height: 150px;
+    background-color: #f5c072;
+    box-shadow: 0px 4px 6px #0000000a;
+    padding: 15px;
+}
+
+.my-board{
+    margin-top: 45vh;
+    width: 100vw;
+    height: 55vh;
+    background-color: #d4a764;
+}
+
+.recruit-champion{
     width: 110px;
     height: 150px;
     display: inline-block;
-    margin-right: 5px;
+    margin-right: 15px;
     margin-bottom: 5px;
+    padding: 0px;
     vertical-align: middle;
+    background-size: cover;
+
     cursor: pointer;
+    h2{
+        position: absolute;
+        bottom: 0px;
+        color: white;
+        text-align: center;
+        width: 100%;
+        margin:0px;
+    }
 }
 
 .pass-button{
     float:right;
     margin-right: 15px;
+}
+
+.ended{
+    background-color: #e9b11c;
+    color: black;
 }
 
 h2{
