--- a/card-game/src/styles.scss
+++ b/card-game/src/styles.scss
@@ -8,4 +8,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 body{
     background-color: #121213;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
 }
